--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 <script>
 
 var map = L.map('map').setView([9.36491 ,78.83495], 11);
-
+var tiles = L.tileLayer('http://{s}.tile.osm.org/{z}/{x}/{y}.png', {
+    attribution: '&copy; <a href="http://osm.org/copyright">OpenStreetMap</a> contributors',
 
 }).addTo(map);
 
